--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -96,6 +96,7 @@
     <module>org.openhab.binding.coolmasternet</module>
     <module>org.openhab.binding.coronastats</module>
     <module>org.openhab.binding.daikin</module>
+    <module>org.openhab.binding.daikin.onecta</module>
     <module>org.openhab.binding.dali</module>
     <module>org.openhab.binding.danfossairunit</module>
     <module>org.openhab.binding.dbquery</module>
