--- a/bundles/org.openhab.binding.daikin.onecta/pom.xml
+++ b/bundles/org.openhab.binding.daikin.onecta/pom.xml
@@ -14,27 +14,27 @@
 
   <name>openHAB Add-ons :: Bundles :: Onecta Binding</name>
   <dependencies>
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>2.12.2</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>2.15.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.10.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>2.0.7</version>
-    </dependency>
+    <!-- <dependency> -->
+    <!-- <groupId>org.scala-lang</groupId> -->
+    <!-- <artifactId>scala-library</artifactId> -->
+    <!-- <version>2.12.2</version> -->
+    <!-- <scope>compile</scope> -->
+    <!-- </dependency> -->
+    <!-- <dependency> -->
+    <!-- <groupId>com.fasterxml.jackson.core</groupId> -->
+    <!-- <artifactId>jackson-annotations</artifactId> -->
+    <!-- <version>2.15.2</version> -->
+    <!-- </dependency> -->
+    <!-- <dependency> -->
+    <!-- <groupId>com.google.code.gson</groupId> -->
+    <!-- <artifactId>gson</artifactId> -->
+    <!-- <version>2.10.1</version> -->
+    <!-- </dependency> -->
+    <!-- <dependency> -->
+    <!-- <groupId>org.slf4j</groupId> -->
+    <!-- <artifactId>slf4j-api</artifactId> -->
+    <!-- <version>2.0.7</version> -->
+    <!-- </dependency> -->
 
 
   </dependencies>
